Added get portfolio with id endpoint
