# docs/swagger.yaml
@@ -48,9 +48,9 @@ definitions:
         $ref: '#/definitions/model.MetadataViewModel'
         type: object
       stocks:
-        items:
+        additionalProperties:
           $ref: '#/definitions/model.StockViewModel'
-        type: array
+        type: object
     type: object
   model.StockViewModel:
     properties:
@@ -138,6 +138,30 @@ paths:
           schema:
             type: string
       summary: Creates portfolio a unique ID
+      tags:
+      - portfolio
+  /portfolio/{id}:
+    get:
+      description: Non-authenticated endpoint that returns a portfolio with matching
+        key.
+      parameters:
+      - description: Portfolio ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.PortfolioViewModel'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Get portfolios endpoint
       tags:
       - portfolio
 swagger: "2.0"
